objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>C%26E Sales Process</fullName>
        <description>Climate / Energy Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed-Lost</fullName>
        </values>
        <values>
            <fullName>Closed-Won</fullName>
        </values>
        <values>
            <fullName>Evaluating Solution %28CE%29</fullName>
        </values>
        <values>
            <fullName>Identified Opportunity %28CE%29</fullName>
        </values>
        <values>
            <fullName>Initial Planning %28CE%29</fullName>
        </values>
        <values>
            <fullName>Specifying Solution %28CE%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Comatrol</fullName>
        <description>Comatrol Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>At Risk</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Gathering Info</fullName>
        </values>
        <values>
            <fullName>Proposal - Cartridge</fullName>
        </values>
        <values>
            <fullName>Proposal - Easy Valve</fullName>
        </values>
        <values>
            <fullName>Proposal - Print</fullName>
        </values>
        <values>
            <fullName>Proposal - Prototype</fullName>
        </values>
        <values>
            <fullName>Win</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Danfoss</fullName>
        <description>Danfoss Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluating Solution</fullName>
        </values>
        <values>
            <fullName>Identified Opportunity</fullName>
        </values>
        <values>
            <fullName>Initial Planning</fullName>
        </values>
        <values>
            <fullName>Specifying Solution</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Turolla</fullName>
        <description>Turolla Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>At Risk</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Evaluating Need</fullName>
        </values>
        <values>
            <fullName>Proposal - High Chance</fullName>
        </values>
        <values>
            <fullName>Proposal - Low Chance</fullName>
        </values>
        <values>
            <fullName>Proposal - Medium Chance</fullName>
        </values>
        <values>
            <fullName>Service</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Secondary__c</fullName>
        <formula>TEXT( Account.Secondary_Segment__c)+ &quot; ,&quot; + TEXT(  Account.Secondary_Sub_Segment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Secondary Segment and SubSegment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segment__c</fullName>
        <formula>TEXT(Account.Segment__c) + &quot;, &quot; + TEXT(Account.Sub_Segment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Primary Segment and SubSegment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_At_Risk__c</fullName>
        <formula>IF ( Low_Quality_Opportunity__c ,  Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount At Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Changes__c</fullName>
        <label>Amount Changes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Announce_Date__c</fullName>
        <label>Announce Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_CE__c</fullName>
        <description>CE Application field</description>
        <inlineHelpText>Add the main application for your Opportunity</inlineHelpText>
        <label>Application CE</label>
        <picklist>
            <controllingField>CE_Division__c</controllingField>
            <picklistValues>
                <fullName>Air compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Conveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aseptic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ball Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch dyeing machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blender/blow-room (Fan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifugal Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifuge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean room (fan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling compressor (Screw)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling compresssor (Piston)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawler cranes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crushers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decanter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Displacement Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling, boring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth moving machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extruder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if we are At Risk of losing this business</inlineHelpText>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Information__c</fullName>
        <label>Background Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_NBA_Provided_Danfoss_Did_Not__c</fullName>
        <label>Benefits NBA Provided Danfoss Did Not</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CERegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>C&amp;E field. 
Region and code is controlled by Country Picklist</description>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>CERegions__c.Country_Code_Name__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CERegions__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_CC_Sub_reason__c</fullName>
        <label>Sub Reason (CC)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Compressor valve does not fit to customer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_Close_Date_Before_Today_in_Month__c</fullName>
        <formula>IF(  CE_Close_Date_Days_into_Month__c  &lt;= CE_REPORTING_Month_in_Year__c
, TRUE
, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Before Today in Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Close_Date_Days_into_Month__c</fullName>
        <formula>1 + (CloseDate - DATEVALUE(TEXT(YEAR(CloseDate)) + &quot;-&quot; + TEXT(MONTH(CloseDate)) + &quot;-&quot; + &quot;01&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Days into Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_DE_Sub_reason__c</fullName>
        <label>Sub Reason (DE)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Our product does not match customer specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_Division__c</fullName>
        <description>Used to make Picklists Divisional dependent</description>
        <inlineHelpText>Used to make Picklists Divisional dependent</inlineHelpText>
        <label>Danfoss Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_HS_Sub_reason__c</fullName>
        <label>Sub Reason (DHS)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Our product does not match customer specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_PE_Sub_reason__c</fullName>
        <label>Sub Reason (DDS)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Customer application requires Liquid cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Front End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harmonic solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overload capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC technique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System supplier/Package deals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_Phase_Change_Date__c</fullName>
        <label>CE Phase Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CE_Phase_Duration__c</fullName>
        <formula>today() - CE_Phase_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Phase__c</fullName>
        <description>C&amp;E Phases for the Pipeline</description>
        <inlineHelpText>Phase indicates where you are in the sales process with your Opportunity</inlineHelpText>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Identification</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_RC_Sub_reason__c</fullName>
        <label>Sub Reason (DCS)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Our product is too large for the customer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressor valve does not fit to customer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_REPORTClose_Date_before_Today_in_Year__c</fullName>
        <formula>IF(  CE_REPORTING_Close_Date_Day_in_Year__c &lt;= CE_REPORTING_Day_in_Year__c
, TRUE 
, FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date before Today in Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_REPORTING_Close_Date_Day_in_Year__c</fullName>
        <formula>1+
(CloseDate 
- 
DATEVALUE( 
TEXT(YEAR(CloseDate)) 
+ &quot;-01-01&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Day in Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_REPORTING_Close_Date_Days_into_FQ__c</fullName>
        <formula>CASE(   CE_ReportingClose_Date_Financial_Quarter__c  , 
&quot;Q1&quot;, CloseDate - DATE(YEAR(CloseDate), 1, 1) + 1, 
&quot;Q2&quot;, CloseDate - DATE(YEAR(CloseDate), 4, 1) + 1, 
&quot;Q3&quot;, CloseDate - DATE(YEAR(CloseDate), 7, 1) + 1, 
CloseDate - DATE(YEAR(CloseDate), 10, 1) + 1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Days into Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_REPORTING_Day_in_Year__c</fullName>
        <formula>1+ (
today()
-
DATEVALUE( 
TEXT(YEAR(TODAY()))
+ &quot;-01-01&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day in Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_REPORTING_Month_in_Year__c</fullName>
        <formula>1 + (TODAY() - DATEVALUE(TEXT(YEAR(TODAY())) + &quot;-&quot; + TEXT(MONTH(TODAY())) + &quot;-&quot; + &quot;01&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month in Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_ReportingClose_Date_Financial_Quarter__c</fullName>
        <formula>IF( MONTH(CloseDate) &lt;=3, &quot;Q1&quot;, 
IF( MONTH(CloseDate) &lt;=6, &quot;Q2&quot;, 
IF( MONTH(CloseDate) &lt;=9, &quot;Q3&quot;, 
&quot;Q4&quot; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Reporting_Close_Date__c</fullName>
        <formula>CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CE_Reporting_Close_Month__c</fullName>
        <formula>CASE(MONTH(CloseDate),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Reporting_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Reporting Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CE_Reporting_Current_Financial_Quarter__c</fullName>
        <formula>IF( MONTH(TODAY()) &lt;=3, &quot;Q1&quot;, 
IF( MONTH(TODAY()) &lt;=6, &quot;Q2&quot;, 
IF( MONTH(TODAY()) &lt;=9, &quot;Q3&quot;, 
&quot;Q4&quot; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Calendar Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Reporting_Current_Year__c</fullName>
        <formula>TEXT(YEAR(today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Reporting_Days_into_Current_FQ__c</fullName>
        <formula>CASE(  CE_Reporting_Current_Financial_Quarter__c , 
&quot;Q1&quot;, TODAY() - DATE(YEAR(TODAY() ), 1, 1) + 1, 
&quot;Q2&quot;, TODAY() - DATE(YEAR(TODAY() ), 4, 1) + 1, 
&quot;Q3&quot;, TODAY() - DATE(YEAR(TODAY() ), 7, 1) + 1, 
TODAY() - DATE(YEAR(TODAY() ), 10, 1) + 1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days into Current FQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Sales_model__c</fullName>
        <description>Sales model is used to identify which of the DBS sales models the Opportunity belongs to.</description>
        <inlineHelpText>Sales model is used to identify which of the DBS sales models the Opportunity belongs to.</inlineHelpText>
        <label>Sales model</label>
        <picklist>
            <picklistValues>
                <fullName>End user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_Sort_Date__c</fullName>
        <description>Used for sorting purposes - will back-date shadow opportunities to keep them in the lower part of the related list - when sorting on this columns</description>
        <formula>IF ( RecordType.DeveloperName=&apos;Shadow_Opportunity&apos;,  DATE(1970,1,1),  CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (CE)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CE_Stage_Change_Date__c</fullName>
        <label>CE_Stage_Change_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CE_Status__c</fullName>
        <description>Status is used to indicate if an Opportunity is Open or Closed.</description>
        <inlineHelpText>Status is used to indicate if an Opportunity is Open or Closed.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <controllingField>CE_Phase__c</controllingField>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CNBILastModified__c</fullName>
        <label>CNBILastModified</label>
        <summarizedField>Customer_Needs_Benefits_Identification__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Customer_Needs_Benefits_Identification__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chosen_Sub_Segment__c</fullName>
        <label>Chosen Sub Segment</label>
        <picklist>
            <picklistValues>
                <fullName>AC - Commercial AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC - Heat Pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC - Residential AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR - Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR - Refrigeration Subsystem Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR - Speciality Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR - Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR - Products &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - Reverse Osmosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - Ultra Pure Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Air Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Industrial Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Industrial Hydraulics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Mobile Hydraulics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Water Pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Wind Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Air Conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Commercial Refrigeration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Direct Served - Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Direct Served - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Direct Served - Premium Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Food Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Indirect Served - Independent Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Indirect Served - Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC - Industrial Automation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>CE used for Project site adress</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate_Changes__c</fullName>
        <label>CloseDate Changes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date_Year__c</fullName>
        <formula>TEXT( YEAR( CloseDate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_before_Today_in_Quarter__c</fullName>
        <formula>IF(  CE_REPORTING_Close_Date_Days_into_FQ__c  &lt;=  CE_Reporting_Days_into_Current_FQ__c  
, TRUE 
, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date before Today in Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Lost__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;Closed Lost&quot;), &quot;L&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;Closed Won&quot;), &quot;W&quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won</label>
        <type>Text</type>
    </fields>
</CustomObject>